--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>想放圖片在這</h1>
+    <iframe src="http://docs.google.com/gview?url=https://drive.google.com/file/d/1aaOsE7Y8SQOMdJLF0m4SLH7T09uTZkvS/view?usp=sharing&embedded=true" style="width:600px; height:500px;" frameborder="0″></iframe>
   </body>
 </html>
