--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <title>個人簡歷</title>
   </head>
+  <iframe src="http://docs.google.com/gview?url=https://drive.google.com/file/d/1xmTthZZaxCNAY7Qz4xQUXV8sTA-g-i8p/view?usp=sharing&embedded=true" style="width:100%; height:100%;" frameborder="0″>
+  </iframe>
   <body>
     <h1>想放圖片在這</h1>
-    <iframe src="http://docs.google.com/gview?url=https://drive.google.com/file/d/1xmTthZZaxCNAY7Qz4xQUXV8sTA-g-i8p/view?usp=sharing&embedded=true" style="width:100%; height:100%;" frameborder="0″></iframe>
   </body>
 </html>
