--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>個人簡歷</title>
   </head>
   <body>
-    <iframe src="http://docs.google.com/gview?url=https://drive.google.com/file/d/1xmTthZZaxCNAY7Qz4xQUXV8sTA-g-i8p/view?usp=sharing&embedded=true" style="width:100%; height:100%;" frameborder="0″></iframe>
+    <iframe src="http://docs.google.com/gview?url=resume_LCH.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0″></iframe>
     <h1>想放圖片在這</h1>
   </body>
 </html>
