--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>個人簡歷</title>
   </head>
   <body>
-    <iframe src="https://louislar.github.io/resume_LCH.pdf" style="width:100%; height:100%;" frameborder="0″></iframe>
+    <iframe src="/resume_LCH.pdf" style="width:100%; height:100%;" frameborder="0″></iframe>
     <h1>想放圖片在這</h1>
   </body>
 </html>
