--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>個人簡歷</title>
   </head>
   <body>
-    <iframe src="/resume_LCH.pdf" style="width:100%; height:100%;" frameborder="0″></iframe>
-    <h1>想放圖片在這</h1>
+    <embed src="/resume_LCH.pdf" type="application/pdf" width="100%" height="600px" />
   </body>
 </html>
