--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>個人簡歷</title>
   </head>
   <body>
-    <embed src="/resume_LCH.pdf" type="application/pdf" width="100%" height="100%" />
+    <embed src="/resume_LCH.pdf" type="application/pdf" width="100%" height="1000px" />
   </body>
 </html>
